# Fast5Fetch

./: Fast5Data.py  setup.cfg
examples/: example.py
fast5fetch/: fast5data.py
