[metadata]
name = Fast5Fetch
version = 0.1.1
author = Jessica Martin
author_email = jessica.martin@nih.gov
description = Package for training neural networks with generators for ONT data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessicam1/Fast5Fetch
project_urls =
    Bug Tracker = https://github.com/jessicam1/Fast5Fetch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    tensorflow
    scipy
    ont_fast5_api
    pathlib
    numpy

